# vericlient

./: .envrc  .gitattributes  .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
CHANGELOG/: index.html
api_docs/daspeak/client/: index.html
api_docs/daspeak/client_usage/: index.html
api_docs/daspeak/exceptions/: index.html
api_docs/daspeak/models/: index.html
api_docs/vcsp/client/: index.html
api_docs/vcsp/client_usage/: index.html
api_docs/vericlient/: index.html
docs/: docs.md  index.html  index.md
docs/api_docs/: vericlient.md
docs/api_docs/daspeak/: client.md  client_usage.md  exceptions.md  models.md
docs/api_docs/vcsp/: client.md  client_usage.md
docs/modules/: vericlient.md
docs/modules/daspeak/: client.md
docs/stylesheets/: extra.css
scripts/: daspeak.py  vcsp.py
search/: search_index.json
src/vericlient/: __init__.py  apis.py  client.py  endpoints.py  environments.py  exceptions.py  factory.py
src/vericlient/config/: config.py  config.yml
src/vericlient/daspeak/: __init__.py  client.py  endpoints.py  exceptions.py  models.py
src/vericlient/vcsp/: __init__.py  client.py  endpoints.py
tests/: conftest.py  test_daspeak.py
tests/daspeak/: conftest.py  test_daspeak.py
tests/vcsp/: conftest.py  test_vcsp.py
