[project]
name = "vericlient"
version = "0.1.0"
description = "Provides a simple and robust interaction with the Veridas API."
authors = [
    {name = "Carlos Larriu", email = "larriucarlos@gmail.com"},
]
dependencies = [
    "pydantic>=2.7.4",
    "structlog>=24.2.0",
    "requests>=2.32.3",
    "dynaconf>=3.2.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://clarriu97.github.io/verimodels/"
Documentation = "https://clarriu97.github.io/verimodels/docs"
Repository = "https://github.com/clarriu97/vericlient"
Issues = "https://github.com/clarriu97/vericlient/issues"
Changelog = "https://github.com/clarriu97/vericlient/blob/master/CHANGELOG.md"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.2",
]

[tool.pdm.scripts]
lint = "ruff check src/vericlient --fix"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests"
]
line-length = 140
indent-width = 4

[tool.ruff.lint]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
