[project]
name = "vericlient"
version = "0.1.0"
description = "Provides a simple and robust interaction with the Veridas API."
authors = [
    {name = "Carlos Larriu", email = "larriucarlos@gmail.com"},
]
dependencies = [
    "pydantic>=2.7.4",
    "structlog>=24.2.0",
    "requests>=2.32.3",
    "dynaconf>=3.2.5",
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://clarriu97.github.io/verimodels/"
Documentation = "https://clarriu97.github.io/verimodels/"
Repository = "https://github.com/clarriu97/vericlient"
Issues = "https://github.com/clarriu97/vericlient/issues"
Changelog = "https://github.com/clarriu97/vericlient/blob/master/CHANGELOG.md"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.29",
    "mkdocstrings[python]>=0.25.1",
]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-html>=4.1.1",
    "requests-mock>=1.12.1",
]

[tool.pdm.scripts]
lint = "ruff check ."
lint-fix = "ruff check . --fix"
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"
test = """pytest tests --mock \
    --cov src/vericlient \
    --cov-report term --cov-fail-under 50 \
    --cov-report html:docs/_build/coverage \
    --cov-report xml:docs/_build/coverage/coverage.xml \
    --html=docs/_build/test-reports/index.html \
    --junitxml=docs/_build/test-reports/junit.xml \
    -o junit_suite_name=test"""
test-prod = """pytest tests \
    --cov src/vericlient \
    --cov-report term --cov-fail-under 50 \
    --cov-report html:docs/_build/coverage \
    --cov-report xml:docs/_build/coverage/coverage.xml \
    --html=docs/_build/test-reports/index.html \
    --junitxml=docs/_build/test-reports/junit.xml \
    -o junit_suite_name=test"""

[tool.ruff]
line-length = 130
indent-width = 4
target-version = "py310"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests",
    "scripts",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "D107",     # Missing docstring in `__init__`
    "D106",     # Missing docstring in public nested class
    "PTH123",   # `open()` should be replaced by `Path.open()`
    "PLR0913",  # Too many arguments in function definition
    "PTH118",   # `os.path` should be replaced by `pathlib.Path`
    "PTH120",   # `os.path.dirname()` should be replaced by `Path.parent`
    "D203",     # 1 blank line required before class docstring
    "D213",     # multi-line-summary-second-line
    "UP038",    # Use `X | Y` in `isinstance` call instead of `(X, Y)`
    "D406",     # Section name should end with a newline
    "D407",     # Missing dashed underline after section
]
unfixable = []

[tool.ruff.format]
quote-style = "double"
